<resources>

    <string name="app_name">EcoRound-App</string>
    <string name="login">Login</string>
    <string name="googleLogin">Login with Google</string>
    <string name="remember">Remember me</string>
    <string name="signup">Don\'t account? Click here to Sign Up!</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="uploadPhoto">Upload Photo</string>
    <string name="expenseCost">Expense Cost</string>
    <string name="expenseDate">Expense Date</string>
    <string name="expenseTitle">Expense Title</string>
    <string name="send">Send</string>
    <string name="category">Category</string>
    <string name="back">Back</string>
    <string-array name="category_options">
        <item>Internet</item>
        <item>Food</item>
        <item>Utilities</item>
        <item>Home rent</item>
        <item>Transportation</item>
        <item>Entertainment</item>
        <item>Gas</item>
        <item>Gift</item>
        <item>Phone</item>
        <item>Shopping</item>
    </string-array>

    <string-array name="sort_options">
        <item>Latest</item>
        <item>Oldest</item>
        <item>Most Expensive</item>
        <item>Cheapest</item>
        <item>A to Z</item>
        <item>Z to A</item>
    </string-array>

    <string-array name="filter_options">
        <item>All</item>
        <item>Entertainment</item>
        <item>Food</item>
        <item>Gas</item>
        <item>Gift</item>
        <item>Home rent</item>
        <item>Internet</item>
        <item>Phone</item>
        <item>Shopping</item>
        <item>Transportation</item>
        <item>Utilities</item>
    </string-array>

</resources>