<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/expenseimg"
            android:layout_gravity="center"
            android:paddingBottom="20dp"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:weightSum="10">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/expensetitle"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:paddingRight="10dp"
                    />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_expenseTitle"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:background="@color/lightGrey"
                    android:hint="@string/expenseTitle"
                    android:textColorHint="@color/grey"
                    android:padding="5dp"
                    android:layout_weight="8"
                    />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:weightSum="10">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/expensecost"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:paddingRight="10dp"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_expenseCost"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:background="@color/lightGrey"
                android:hint="@string/expenseCost"
                android:textColorHint="@color/grey"
                android:padding="5dp"
                android:layout_weight="8"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:weightSum="10">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/expensedate"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:paddingRight="10dp"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_expenseDate"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:background="@color/lightGrey"
                android:hint="@string/expenseDate"
                android:textColorHint="@color/grey"
                android:padding="5dp"
                android:layout_weight="8"
                android:inputType="date"
                />

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_receipt"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/receiptimg"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/uploadPhoto"
            android:textColor="@color/white"
            android:background="@drawable/roundercorner_button"
            android:layout_gravity="center"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="5"
                android:padding="10dp">

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:background="@drawable/roundercorner_button"
                    android:layout_gravity="center|left"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="5"
                android:padding="10dp">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:background="@drawable/roundercorner_button"
                    android:layout_gravity="center|right"
                    />


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>