<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/layout_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_money"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/money_icon"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textSize="35sp"
                android:padding="20dp"
                android:textStyle="bold"/>


        </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:weightSum="10">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/email"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:paddingRight="10dp"
                    />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:background="@color/lightGrey"
                    android:hint="Email Address"
                    android:textColorHint="@color/grey"
                    android:padding="5dp"
                    android:layout_weight="8"
                    />

            </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:weightSum="10">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/password"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:paddingRight="12dp"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:background="@color/lightGrey"
                android:hint="Password"
                android:textColorHint="@color/grey"
                android:padding="5dp"
                android:layout_weight="8"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            />

            <TextView
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember"
                />

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"

            android:background="@drawable/roundercorner_button"
            android:layout_gravity="center"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/btn_googleLogin"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/roundercorner_button"
                android:drawableStart="@drawable/googleicon"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/googleLogin"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/btn_qrLogin"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/roundercorner_button"
                android:drawableStart="@drawable/qr"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="LOGIN with qr code"
                android:textColor="@color/white" />

        </LinearLayout>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_forgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot your password?"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="30dp"
            >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:clickable="true"
                />


        </LinearLayout>



    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>